# CacheFR

./: .gitignore  Cargo.toml  Dockerfile  build.rs
benchmarks/: Cargo.toml  cache-fr-benchmark.py  redis-benchmark.py
benchmarks/src/: cache_fr_bench.rs  redis_bench.rs
client/: Cargo.toml  build.rs
client/examples/: usage.rs
client/src/: lib.rs
proto/: commands.proto  commands_proto.proto
src/: consts.rs  example_client.rs  lib.rs  main.rs  main_map_impl.rs  mod.rs  server.rs  structs.rs  value_structs.rs
src/commands/: get.rs  int_operations.rs  list_operations.rs  mod.rs  set.rs  set_operations.rs
tests/: int_command_test.rs  integration_test.rs  list_commands_test.rs  mod.rs  set_commands_test.rs  set_test.rs
