[package]
name = "cache_fr"
version = "0.1.0"
edition = "2021"

[[test]]
name="testing_test_test"
path="tests/integration_test.rs"

[[bin]]
name="cache_fr_server"
path="src/server.rs"

[[bin]]
name="cache_fr_example_client"
path="src/example_client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }

[build-dependencies]
tonic-build = "0.7"
prost-build = "0.10"