[package]
name = "cache_fr"
version = "0.1.0"
edition = "2021"

[[bin]]
name="cache_fr_server"
path="src/server.rs"

[[bin]]
name="cache_fr_example_client"
path="src/example_client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
dashmap = "5.5.3"
bb8 = "0.8.3"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.6"


[workspace]
members = [
    "client",
    "benchmarks",
]
