[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.25.4"
rand = "0.8.4"
stopwatch = "0.0.7"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11.0", features = ["transport"] }
prost = "0.12.6"
cache_fr_client = {path = "../client"}
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"

[[bin]]
name="cache_fr_bench"
path="src/cache_fr_bench.rs"


[[bin]]
name="redis_bench"
path="src/redis_bench.rs"


[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.6"
