[package]
name = "cache_fr_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
prost = "0.12.6"
bb8 = "0.8.3"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.6"

[[example]]
name = "usage"
path = "examples/usage.rs"